# FileTea

./: .gitignore  AUTHORS  Makefile  Makefile.am  autogen.sh  configure.ac  file-source.c  file-source.h  file-transfer.c  file-transfer.h  filetea-init.d  filetea.8  filetea.conf  filetead.8  filetead.conf  main.c  sample-filetea.conf  video red xime
filetea/: .gitignore  Makefile.am  file-source.c  file-source.h  file-transfer.c  file-transfer.h  filetea-main.c  filetea-node.c  filetea-node.h  filetea-protocol.c  filetea-protocol.h  filetea-source.c  filetea-source.h  filetea-transfer.c  filetea-transfer.h  filetea-web-service.c  filetea-web-service.h  filetead-main.c  main.c
html/: Makefile.am  contentManager.js  download-view.html  downloadView.js  fileSourceView.js  fileTea.js  index.html  jsonRpc.js  main.css  main.js  not-found-view.html  require.js  shared-files-view.css  sharedFilesView.js  transfers-view.css  transfersView.js  utils.js  ux.js
html/common/: contentManager.js  fileTea.js  main.js  privacy-policy.html  transfers.js  utils.js
html/default/: download-view.css  download-view.html  downloadView.js  index.html  main.css  shared-files-view.css  sharedFilesView.js  transfers-view.css  transfersView.js  ux.js
html/default/jquery-ui/css/start/: jquery-ui-1.8.9.custom.css-backup
tests/: .gitignore  Makefile.am  test-node-sources.c  test-node-sources.conf  test-protocol.c
